<resources>
    <string name="app_name">MiniLinkedin</string>
    <string name="section_education">Education</string>
    <string name="section_experience">Experience</string>
    <string name="section_project">Project</string>
    <string name="education_school">School</string>
    <string name="education_major">Major</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="Courses">Courses</string>
    <string name="save">save</string>
</resources>
