<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/education_school_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/education_school"/>

    <EditText
        android:id="@+id/education_major_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/education_major"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/start_date_edit"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/start_date"/>
        <EditText
            android:id="@+id/end_date_edit"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/end_date"/>

    </LinearLayout>
    <EditText
        android:id="@+id/education_courses_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Courses"/>



</LinearLayout>