<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.weaver.minilinkedin.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/image">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="Xiaolong Yang"/>

                <ImageButton
                    android:id="@+id/edit_name"
                    android:layout_width="@dimen/icon_button_size"
                    android:layout_height="@dimen/icon_button_size"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_mode_edit_black_18dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </LinearLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="weaveryxl549@gmail.com"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/name_layout"/>

            <ImageView
                android:id="@+id/image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/yandere"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            >
            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/section_education"
                android:textAllCaps="true" />

            <ImageButton
                android:id="@+id/add_education_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="Add education"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/education_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            >
            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/section_experience"
                android:textAllCaps="true"/>

            <ImageButton
                android:id="@+id/add_experience_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:id="@+id/exp_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="OSU (03/2013 ~ 06/2016)" />

            <ImageButton
                android:id="@+id/edit_experience_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_mode_edit_black_18dp"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>

        <TextView
            android:id="@+id/exp_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ME538 Autonomous Agents\nCS534 Machine Learning\nCS519 Deep Learning"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            >
            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="23sp"
                android:text="@string/section_project"
                android:textAllCaps="true"/>
            <ImageButton
                android:id="@+id/add_project_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:id="@+id/Project_name"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cell Segmentation"/>

            <ImageButton
                android:id="@+id/edit_project_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_mode_edit_black_18dp"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>

        <TextView
            android:id="@+id/Project_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CS533 Smart Phone Game AI Design\nCS534 Face Recognization and Classification\nCS519 Cell Segmentation\nROB537 Spam Filter"
            />

    </LinearLayout
>
</ScrollView>
